{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 39,
  "lineage": "a444df8b-bf94-6b61-d959-51d4178eb824",
  "resources": [
    {
      "module": "module.aws-instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "flask-app-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d2b3011fe4d8ad42",
            "arn": "arn:aws:ec2:me-south-1:729207654069:instance/i-0a50161dd292e303e",
            "associate_public_ip_address": true,
            "availability_zone": "me-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a50161dd292e303e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-bahrain",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09d2669a526f40ac1",
            "private_dns": "ip-10-0-0-224.me-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.224",
            "public_ip": "16.24.72.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ff49121254c0051a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03801810202d61af0",
            "tags": {
              "Name": "flask app server"
            },
            "tags_all": {
              "Name": "flask app server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b9d2123f46d80599"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "key_name"
              }
            ]
          ],
          "dependencies": [
            "module.aws-instances.aws_security_group.my-security-group",
            "module.aws-instances.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-instances",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:729207654069:internet-gateway/igw-02d12b06524aed841",
            "id": "igw-02d12b06524aed841",
            "owner_id": "729207654069",
            "tags": {
              "Name": "my-internet-gateway"
            },
            "tags_all": {
              "Name": "my-internet-gateway"
            },
            "vpc_id": "vpc-024c07d266c5a404a"
          },
          "dependencies": [
            "module.aws-instances.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-instances",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:729207654069:route-table/rtb-0b7144e12f118a353",
            "id": "rtb-0b7144e12f118a353",
            "owner_id": "729207654069",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02d12b06524aed841",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table"
            },
            "tags_all": {
              "Name": "my-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-024c07d266c5a404a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-instances.aws_internet_gateway.my-internet-gateway",
            "module.aws-instances.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-instances",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096b8fe9cda541ffa",
            "route_table_id": "rtb-0b7144e12f118a353",
            "subnet_id": "subnet-03801810202d61af0"
          },
          "dependencies": [
            "module.aws-instances.aws_internet_gateway.my-internet-gateway",
            "module.aws-instances.aws_route_table.my-route-table",
            "module.aws-instances.aws_subnet.my-subnet",
            "module.aws-instances.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:729207654069:security-group/sg-0b9d2123f46d80599",
            "description": "my-security-group for terraform project",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9d2123f46d80599",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-security-group",
            "name_prefix": "",
            "owner_id": "729207654069",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-024c07d266c5a404a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-instances.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-instances",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:729207654069:subnet/subnet-03801810202d61af0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-south-1a",
            "availability_zone_id": "mes1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03801810202d61af0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "729207654069",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-subnet"
            },
            "tags_all": {
              "Name": "my-subnet"
            },
            "vpc_id": "vpc-024c07d266c5a404a"
          },
          "dependencies": [
            "module.aws-instances.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-instances",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:729207654069:vpc/vpc-024c07d266c5a404a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-08b453f6704db2a76",
            "default_route_table_id": "rtb-0d5091f4d4f8932cf",
            "default_security_group_id": "sg-0fef1ce4f35b6e2c7",
            "dhcp_options_id": "dopt-0d4d6bf78b04b8679",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-024c07d266c5a404a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d5091f4d4f8932cf",
            "owner_id": "729207654069"
          }
        }
      ]
    },
    {
      "module": "module.aws-instances",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:729207654069:security-group-rule/sgr-088a4a308bc2c0ee3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-088a4a308bc2c0ee3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b9d2123f46d80599",
            "security_group_rule_id": "sgr-088a4a308bc2c0ee3",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-instances.aws_security_group.my-security-group",
            "module.aws-instances.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-instances",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:729207654069:security-group-rule/sgr-04a5f8f21a5383483",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-04a5f8f21a5383483",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b9d2123f46d80599",
            "security_group_rule_id": "sgr-04a5f8f21a5383483",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-instances.aws_security_group.my-security-group",
            "module.aws-instances.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-instances",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:729207654069:security-group-rule/sgr-039cf2fedc70e1f17",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-039cf2fedc70e1f17",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b9d2123f46d80599",
            "security_group_rule_id": "sgr-039cf2fedc70e1f17",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-instances.aws_security_group.my-security-group",
            "module.aws-instances.aws_vpc.my-vpc"
          ]
        }
      ]
    }
  ]
}